2006-12-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/array.h, itpp/base/mat.cpp, itpp/base/mat.h,
	itpp/base/vec.cpp, itpp/base/vec.h: Improved the consistency of
	alloc(), free() and set_size() methods in Array, Mat and Vec
	classes. Further cosmetic changes of separating class interfaces
	from their implementation in these base classes.

2006-12-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.cpp, itpp/base/mat.h, itpp/base/vec.cpp,
	itpp/base/vec.h: Cosmetic changes in order to separate class
	interfaces from implementation. BTW, private init() function
	replaced with initialisation list.

	* doc/Makefile.am, itpp/base/algebra/Makefile.am,
	itpp/base/algebra/sources.mk, itpp/base/bessel/Makefile.am,
	itpp/base/bessel/sources.mk: Removed "lapack.h" and
	"bessel_internal.h" from the list of installed headers. BTW,
	cleaned up the dependency list in the documentation Makefile.

2006-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp, itpp/base/random.h, tests/bch_test.ref,
	tests/channel_test.ref, tests/cholesky_test.ref,
	tests/circular_buffer_test.ref, tests/convcode_test.ref,
	tests/det_test.ref, tests/eigen_test.ref, tests/fastica_test.ref,
	tests/filter_design_test.ref, tests/filter_test.ref,
	tests/histogram_test.ref, tests/interleaver_test.ref,
	tests/inv_test.ref, tests/ls_solve_test.ref, tests/lu_test.ref,
	tests/matfunc_test.ref, tests/mat_test.ref,
	tests/modulator_nd_test.ref, tests/modulator_test.ref,
	tests/poly_test.ref, tests/pulse_shape_test.ref,
	tests/qr_test.ref, tests/rand_test.ref,
	tests/reedsolomon_test.ref, tests/schur_test.ref,
	tests/sigfun_test.ref, tests/source_test.ref,
	tests/sparse_test.ref, tests/stat_test.ref, tests/svd_test.ref,
	tests/transforms_test.ref, tests/turbo_test.ref,
	tests/vec_test.ref, TODO: Updated Mersenne Twister random number
	generator sources to the latest version 1.0 published by Richard
	J. Wagner on 15th May, 2003. 
