@@ -31,9 +31,6 @@ Specific features
 
 * Multi-dimensional arrays
 
-* Add Array<T>::mid(start, nrof_elem), Array<T>::left(nrof_elem),
-  Array<T>::right(nrof_elem) (Pal)
-
 * The member ">>" and "<< operators needs to be revised. The "<<" operator
   does not always match the ">>" one.
 
@@ -60,4 +57,3 @@ Specific features
   - should choose the transposed matrix also (for fast row access)? (Erik) 
   - is there any gain by maintaining the index vector sorted? (Erik)
   - add cout for Sparse_Vec and Sparse_Mat (Pal)
-
