@@ -1,3 +1,9 @@
+2007-01-01  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/array.h, tests/array_test.cpp, tests/array_test.ref,
+	TODO: Added missing left(), right() and mid() methods to the Array
+	class.
+
 2006-12-30  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/array.h, itpp/base/mat.cpp, itpp/base/mat.h,
